fix: harmonize units

--- a/dermardiros/anoushabour.tex
+++ b/dermardiros/anoushabour.tex
@@ -25,7 +25,7 @@ Family member: Sybil
 \begin{enumerate}
     \item In a pot, cook pearl barley in 2~cups of water for 10~minutes.
     \item Remove from stove, let cool. Cover and leave overnight.
-    \item The next day, the barley should be plump. Add a little more water, the raisins and apricots. Continue to cook for a few minutes. There should be water in the pot (not completely absorbed).
+    \item The next day, the barley should be plump. Add a little more water, the raisins and apricots. Continue to cook for a few minutes. There should be water in the pot and not be completely absorbed.
     \item After 15~minutes, add the sugar and continue cooking for 15~minutes more.
     \item Once done, remove from heat, add rose water or orange blossom water if using, and let it cool.
     \item Pour in a large glass bowl and serve.
