--- a/dermardiros/best_chocolatechip_cookies.tex
+++ b/dermardiros/best_chocolatechip_cookies.tex
@@ -10,16 +10,16 @@
     Cook time: 12-15~minutes \\
     \vspace*{\baselineskip}
 
-    ½~cup granulated sugar (100~g) \\
-    ¾~cup brown sugar, packed (165~g) \\
+    100~g/½~cup granulated sugar \\
+    165~g/¾~cup brown sugar, packed \\
     1~tsp salt
-    ⅓~cup unsalted butter, melted (113~g) \\
+    113~g/⅓~cup unsalted butter, melted \\
     1~large egg \\
     1~tsp vanilla extract \\
-    1¼~cups all-purpose flour (155~g) \\
+    155~g/1¼~cups all-purpose flour \\
     ½~tsp baking soda \\
-    4~oz milk or semi-sweet chocolate chunks (110~g) \\
-    4~oz dark chocolate chunks (110~g), or your preference
+    110~g/4~oz milk or semi-sweet chocolate chunks \\
+    110~g/4~oz dark chocolate chunks, or your preference
 }
 
 \marginalfigure{dermardiros/images/Ballon poire 2023.jpg}{Ballon poire at Clara's birthday, 2023}{fig:chocolatechip_cookies2}
@@ -27,7 +27,7 @@
 Family member: Emma
 
 \begin{enumerate}
-    \item Preheat oven to 350\degree F (180\degree C).
+    \item Preheat oven to 350\degree F/180\degree C.
     \item Bake for 12-15~minutes.
 \end{enumerate}
 
