--- a/dermardiros/betteraves.tex
+++ b/dermardiros/betteraves.tex
@@ -9,7 +9,7 @@
     Cook time: 1~hour \\
     \vspace*{\baselineskip}
 
-    1360~g (3~lbs) red beets \\
+    1360~g/3~lbs red beets \\
     Garlic, peeled and cut into slices \\
     White vinegar \\
     Salt \& pepper
