--- a/dermardiros/bourgignon.tex
+++ b/dermardiros/bourgignon.tex
@@ -14,8 +14,8 @@
     2~onions, roughly chopped \\
     2~carrots, chopped in chunks \\
     5~yellow potatoes, chopped in chunks \\
-    227~mushrooms, quartered (optional) \\
-    1.1~L broth for fondue and cooking, Red wine (Canton) \\
+    227~mushrooms, quartered, optional \\
+    1.1~L broth for fondue and cooking, Canton brand red wine \\
     1-2~tbsp flour \\
     3~bay leaves, dried \\
     3~garlic cloves, crushed \\
