--- a/dermardiros/dinerburgers.tex
+++ b/dermardiros/dinerburgers.tex
@@ -11,7 +11,7 @@
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for burgers and toppings} \\
-    Approx 680~g of ground beef, 80-20~or 70-30~blend (lean meat to fat) \\
+    Approx 680~g of ground beef, 80-20~or 70-30~blend lean meat to fat \\
     Salt and pepper \\
     Brioche buns \\
     Finely shredded iceberg lettuce \\
