--- a/dermardiros/frenchtoast.tex
+++ b/dermardiros/frenchtoast.tex
@@ -4,7 +4,7 @@
 \index{bread}
 
 \marginnote{
-    \textbf{Makes 8~half servings (or 4~full bread servings)} \\
+    \textbf{Makes 8~half servings, or 4~full bread servings} \\
     Prep time: 15~minutes \\
     \vspace*{\baselineskip}
 
