--- a/dermardiros/keufte.tex
+++ b/dermardiros/keufte.tex
@@ -9,7 +9,7 @@
     Cook time: 45~minutes \\
     \vspace*{\baselineskip}
 
-    907~g (2~lb) ground beef, lean \\
+    907~g/2~lb ground beef, lean \\
     1-2~tbsp fresh parsley, chopped \\
     3~tbsp breadcrumbs \\
     1-2~tbsp milk \\
