--- a/dermardiros/lahanai_dolma.tex
+++ b/dermardiros/lahanai_dolma.tex
@@ -12,12 +12,12 @@
     \vspace*{\baselineskip}
 
     ½~Savoy cabbage \\
-    454~g (1~lb) of ground beef \\
+    454~g/1~lb of ground beef \\
     ¼~cup + 1~tbsp rice, Calrose \\
     1~medium onion, chopped \\
     ½~tsp salt \\
     ½~tsp pepper \\
-    ¾~cup + ¼ to ⅓~cup Passata, Unico (low sodium)
+    ¾~cup + ¼ to ⅓~cup Passata, low-sodium Unico
 }
 
 \marginalfigure{dermardiros/images/PXL_20240128_010747331.PORTRAIT.ORIGINAL.jpg}{Topped with yogurt and dill!}{fig:lahanai_dolma}
@@ -28,7 +28,7 @@ Family member: Metzma Lucie
 
 \begin{enumerate}
     \item Heat water and salt in a small pot.
-    \item Remove each cabbage leaf gently and cut out the stem (middle hard part).
+    \item Remove each cabbage leaf gently and cut out the stem: the middle hard part.
     \item Put a the leaves 3~at a time into the boiling water and leave for 1~minute until they are tender.
     \item Put each boiled leaf on a plate lined with paper towel. Reserved cabbage water.
     \item In a medium bowl, mix ground beef, rice, onion, salt and pepper.
