--- a/dermardiros/mantuh.tex
+++ b/dermardiros/mantuh.tex
@@ -14,13 +14,13 @@
     4~cups all-purpose flour \\
     ¼~cup milk \\
     ½~tsp salt \\
-    1~cup lukewarm water + ¼ to ½~cup more (as much as dough takes) \\
-    Oil (to work dough with hands) \\
+    1~cup lukewarm water + ¼ to ½~cup more, as much as dough takes \\
+    Oil, to work dough with hands \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for meat} \\
     1~medium onion, thinly chopped \\
-    454~g (1~lb) ground lean beef \\
+    454~g/1~lb ground lean beef \\
     Salt \& pepper to taste \\
     Armenian or Lebanese pepper
 }
