--- a/dermardiros/mantuhshahinian.tex
+++ b/dermardiros/mantuhshahinian.tex
@@ -18,7 +18,7 @@
     3~garlic cloves, crushed \\
     1~kg Balkan Yogurt 6\% fat, Astro brand \\
     Canola oil \\
-    2~packets (500~g) of pasta Rigatoni
+    500~g/2~packets of pasta Rigatoni
 }
 
 Family member: Sybil
