--- a/dermardiros/meatpies.tex
+++ b/dermardiros/meatpies.tex
@@ -8,19 +8,19 @@
 \marginnote{
     \textbf{Makes 6~meat pies} \\
     Prep time: 3~hours \\
-    Cook time: 45~minutes, or 20~minutes for partially cooked (frozen) pies \vspace*{\baselineskip}
+    Cook time: 45~minutes, or 20~minutes for partially cooked, frozen, pies \vspace*{\baselineskip}
 
-    2.3~kg (5~lbs) minced veal \\
-    1.8~kg (4~lbs) minced pork \\
-    907~g (2~lbs) minced lean beef \\
+    2.3~kg/5~lbs minced veal \\
+    1.8~kg/4~lbs minced pork \\
+    907~g/2~lbs minced lean beef \\
     Small pack of bacon with maple \\
     Becel margarine \\
     ¼~onion chopped in small pieces \\
     5~tsp Provence spices \\
     Black pepper \\
     3~cups of red or white wine \\
-    1½~cups of Italian bread crumbs (up to 3~cups if needed) \\
-    2~packages of pie dough from Metro (Francois Hubert pie dough 1~kg makes 5~bases) \\
+    1½~cups of Italian bread crumbs, up to 3~cups if needed \\
+    2~packages of pie dough from Metro, Francois Hubert 1~kg pie dough makes 5~bases \\
     Flour \\
     2~eggs
 }
