--- a/dermardiros/pastameatsauce.tex
+++ b/dermardiros/pastameatsauce.tex
@@ -12,13 +12,13 @@
 
     2~tbsp olive oil \\
     1~finely chopped small onion \\
-    1~garlic clove, crushed (optional) \\
-    227~g (½~lb) of minced veal \\
-    227~g (½~lb) of minced pork \\
-    227~g (½~lb) of minced beef \\
+    1~garlic clove, crushed, optional \\
+    227~g/½~lb of minced veal \\
+    227~g/½~lb of minced pork \\
+    227~g/½~lb of minced beef \\
     300~g Chianti Red Wine Rosette de Lyon dried sausage by Papille \\
-    1~can (796~ml) Aylmer Diced Tomatoes with Italian Spices \\
-    2~cans (156~ml) of Unico Tomato Paste \\
+    796~ml/1~can Aylmer Diced Tomatoes with Italian Spices \\
+    156~ml/2~cans of Unico Tomato Paste \\
     1¼~cups of red wine \\
     2~tsp dried oregano \\
     Fresh basil \\
