--- a/dermardiros/quiche.tex
+++ b/dermardiros/quiche.tex
@@ -15,7 +15,7 @@
     320~grams of shredded cheese, Italian 4~cheese \\
     6~slices of ham, cut \\
     5~eggs \\
-    1~cup (250~ml) 15\% cooking cream \\
+    250~ml/1~cup  15\% cooking cream \\
     Pepper
 }
 
