--- a/dermardiros/souloukefteh.tex
+++ b/dermardiros/souloukefteh.tex
@@ -11,7 +11,7 @@
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for stock} \\
-    1~beef shank or 2~veal shanks (about 454~g/1~lb) \\
+    1~beef shank or 2~veal shanks, about 454~g/1~lb \\
     1~large yellow onion \\
     2~bay leaves \\
     8-10~cups of water \\
@@ -20,15 +20,15 @@
 
     \textbf{Ingredients for soup} \\
     Reserved stock \\
-    454~g (1~lb) ground beef \\
+    454~g/1~lb ground beef \\
     ½~large yellow onion \\
     ¼~cup rice, Calrose \\
     ½~cup parsley, chopped \\
     1~egg \\
     Salt \& pepper to taste
     3~white or Russet potatoes, cubed \\
-    Carrots, chopped (optional) \\
-    ¼~cup rice, Calrose (or orzo)
+    Carrots, chopped, optional \\
+    ¼~cup rice, Calrose, or orzo
 }
 
 \textit{Soupe boulettes de viande}
@@ -40,6 +40,6 @@ Family member: Metzma Lucie
     \item Remove the shank, take off the meat and add it to the stock. Remove the onion dd the tomato paste and mix.
     \item In a bowl, grate the onion and mix it with the meat, rice, parsley and egg. Add salt and pepper and let stand for about 15~minutes.
     \item Form 1.5-inch balls of the meat mixture while bringing the stock to a boil.
-    \item Add the meatballs and reserved ¼~cup rice (or orzo). Reduce to a simmer.
-    \item After 15~minutes, add the potatoes (and carrots if using) and continue cooking for 30~minutes to 1~hour.
+    \item Add the meatballs and reserved ¼~cup rice, or orzo. Reduce to a simmer.
+    \item After 15~minutes, add the potatoes, and carrots if using, and continue cooking for 30~minutes to 1~hour.
 \end{enumerate}
