--- a/dermardiros/yulelog.tex
+++ b/dermardiros/yulelog.tex
@@ -26,8 +26,8 @@
     3-4~tbsp Kahlua \\
     \vspace*{\baselineskip}
 
-    \textbf{For decoration (optional)} \\
-    Lindt chocolate balls (dark, milk, white) \\
+    \textbf{For decoration, optional} \\
+    Lindt chocolate balls: dark, milk, white \\
     Raspberries \\
     Chocolate Santa Clause or Snowman
 }
