--- a/monanteras/dolmadakia.tex
+++ b/monanteras/dolmadakia.tex
@@ -14,7 +14,7 @@
 
     \textbf{Dolmadakia ingredients} \\
     40~large grape leaves, blanched OR 1~jar of grape leaves in brine, Cedar \\
-    907~g (2~lbs) lean ground beef \\
+    907~g/2~lbs lean ground beef \\
     1~cup medium grain rice, uncooked \\
     2~large eggs \\
     1~large onion, finely diced \\
@@ -35,7 +35,7 @@
 
 Family member: Grandma Eleni
 
-\newthought{The dolmadakia} that Grandma Eleni would make are similar to Sarma, but would have Avgolemono, an egg-lemon creamy sauce. You can also make them yalatzi (only with rice and herbs) during lent. I remember her and my grandfather telling us they would pick the vine leaves from their neighbors' yards in their neighborhood in Laval!
+\newthought{The dolmadakia} that Grandma Eleni would make are similar to Sarma, but would have Avgolemono, an egg-lemon creamy sauce. You can also make them yalatzi during lent by using only rice and herbs. I remember her and my grandfather telling us they would pick the vine leaves from their neighbors' yards in their neighborhood in Laval!
 
 \begin{enumerate}
     \item Blanch the vine leaves if using fresh. Fill a large bowl with cold water and ice cubes. Fill a large pot two thirds of the way with water and bring to a boil. Once the water is boiling, place several leaves in the pot with a laddle. Press the leaves down gently with a ladle to ensure they are fully submerged in the boiling water. After 1-2~minutes or when the leaves are wilted, remove them from the water and immediately submerge them in ice water. Remove the leaves from the ice water with the strainer ladle and put them on a plate. Pat the grape leaves with a paper towel. If using jarred vine leaves, simply put the leaves on a paper towel and pat them dry.
