--- a/monanteras/fakes.tex
+++ b/monanteras/fakes.tex
@@ -14,10 +14,10 @@
     1~white onion \\
     3~tbsp olive oil \\
     2~garlic cloves, thinly sliced \\
-    1~can tomato sauce, Hunt's (213~ml) \\
+    213~ml/1~can tomato sauce, Hunt's \\
     3~bay leaves \\
     1~pinch salt \\
-    Carrots, sliced (optional)
+    Carrots, sliced, optional
 }
 
 \textit{Lentil soup}
@@ -25,7 +25,7 @@
 Family member: Mom
 
 \begin{enumerate}
-    \item Soak lentils in cold water overnight (around 12~hours). The next day, drain out the water using a sieve.
+    \item Soak lentils in cold water overnight, for around 12~hours. The next day, drain out the water using a sieve.
     \item In a medium pot, grate onion and add 3~tbsp olive oil.
     \item Heat on high and cook until the onion is soft. Add drained lentils and cook.
     \item Add the tomato sauce. Bring the pot over the sink and fill half the pot with water.
