--- a/monanteras/fassolakia.tex
+++ b/monanteras/fassolakia.tex
@@ -16,7 +16,7 @@
     ½~cup parsley, chopped \\
     Salt \\
     Oil \\
-    3-5~red potatoes, peeled and quartered (keep in cold water)
+    3-5~red potatoes, peeled and quartered, keep in cold water
 }
 
 \textit{Green beans with potatoes}
