--- a/monanteras/gemista.tex
+++ b/monanteras/gemista.tex
@@ -20,7 +20,7 @@
     1~cup olive oil \\
     1~cup fresh parsley, chopped \\
     1~cup fresh mint, chopped \\
-    1~can tomato juice, Heinz (540~ml) \\
+    540~ml/1~can tomato juice, Heinz \\
     1~large onion, thinly chopped \\
     4~red potatoes, peeled and cut into wedges \\
     Breadcrumbs \\
