--- a/monanteras/hilopites with chicken.tex
+++ b/monanteras/hilopites with chicken.tex
@@ -12,11 +12,11 @@
 
     1~large onion \\
     1~garlic clove \\
-    About 11~chicken drumsticks (without skin) \\
+    About 11~chicken drumsticks, without skin \\
     Salt \\
     Pepper \\
-    ½~can tomato sauce, Hunt's (213~ml) or 1~full can \\
-    1~tbsp tomato paste (optional) \\
+    ½~can tomato sauce, Hunt's, 213~ml, or 1~full can \\
+    1~tbsp tomato paste, optional \\
     1~cup hilopites, or orzo/pasta
 }
 
@@ -29,7 +29,7 @@ Family member: Mom
 \begin{enumerate}
     \item In a large pot, grate the onion and add some olive oil. Heat on high.
     \item When it starts to sizzle, stir with a wooden spoon and add the chicken drumsticks. Season with salt and pepper and stir until chicken is lightly browned.
-    \item Add the ½~or 1~can of tomato sauce and tomato paste (if using).
+    \item Add the ½~or 1~can of tomato sauce and tomato paste, if using.
     \item Add about 3~cups of water, mix and reduce heat.
     \item Cook for 1½~hours until reduced and left with about 2~cups liquid.
     \item Remove the chicken and while keeping liquid on a simmer, add the hilopites.
