--- a/monanteras/hortopita.tex
+++ b/monanteras/hortopita.tex
@@ -16,7 +16,7 @@
 
     \textbf{Ingredients for filling} \\
     1~kg spinach, washed well and chopped \\
-    1~kg wild or mixed greens (combination of dandelions, lettuce, chicory, arugula, swiss chard), washed well and roughly chopped \\
+    1~kg wild or mixed greens: combination of dandelions, lettuce, chicory, arugula, swiss chard, washed well and roughly chopped \\
     1~bunch of parsley, thinly chopped \\
     1~leek, thinly chopped \\
     1~onion, thinly chopped \\
