--- a/monanteras/karidopita.tex
+++ b/monanteras/karidopita.tex
@@ -11,7 +11,7 @@
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for cake} \\
-    2½~cups all-purpose flour (Monarch Cake \& pastry flour) \\   % TODO: put picture
+    2½~cups all-purpose flour: Monarch Cake \& pastry flour \\   % TODO: put picture
     8~eggs \\
     2~cups sugar \\
     1~cup gingerale \\
