--- a/monanteras/kokkinisto.tex
+++ b/monanteras/kokkinisto.tex
@@ -13,7 +13,7 @@
     ½~cup olive oil \\
     1~onion, grated \\
     1.5~kg beef or veal flank, cut into large cubes, or boneless stewing beef cubes \\
-    1~can tomato sauce, Hunt's (213~ml) \\
+    213~ml/1~can tomato sauce, Hunt's \\
     Salt and Pepper
 }
 
