--- a/monanteras/lasagna.tex
+++ b/monanteras/lasagna.tex
@@ -14,11 +14,11 @@
     \textbf{One recipe of Meat sauce, page~\pageref{ch:meatsauce}} \\
     \vspace*{\baselineskip}
 
-    454~g (1~pkg) Ricotta cheese \\
-    285~g (1~pkg) frozen chopped spinach, thawed and drained \\
+    454~g/1~pkg Ricotta cheese \\
+    285~g/1~pkg frozen chopped spinach, thawed and drained \\
     2~eggs, lightly beaten \\
-    500~g lasagna noodles, Primo (around 12~sheets) \\
-    1~jar of Catelli Garden Select Tomato \& Basil Pasta Sauce (640~ml) \\
+    500~g lasagna noodles, Primo, around 12~sheets \\
+    640~ml/1~jar of Catelli Garden Select Tomato \& Basil Pasta Sauce \\
     Shredded mozzarella cheese \\
     Grated Pecorino cheese, Chelmos Greek or mitzithra
 }
