--- a/monanteras/lemon_cake.tex
+++ b/monanteras/lemon_cake.tex
@@ -34,7 +34,7 @@ Family member: Grandma Eleni
     \item Dip Goglu cookies in the juice of the canned peaches, and line them at the bottom of a large rectangular glass Pyrex.
     \item Prepare the 3~packets of Lemon pie mix following the directions. Pour the lemon mix on top of the cookies.
     \item In a small pot, warm the peach juice. Once it is boiling, add 1~tsp cornstarch and whisk until smoothe and thickened. Pour it evenly on top of the lemon curd.
-    \item Whip the Nutriwhip (or Heavy cream if using) and spread it evenly on top. Add enough to create a nice 1-2-inch layer and create waves with a spoon or small spatula.
+    \item Whip the Nutriwhip, or Heavy cream if using, and spread it evenly on top. Add enough to create a nice 1-2-inch layer and create waves with a spoon or small spatula.
     \item Decorate with maraschino cherries, slivered almonds, and some peaches if desired. Keep in fridge until ready to serve.
 \end{enumerate}
 
