--- a/monanteras/mavromatika.tex
+++ b/monanteras/mavromatika.tex
@@ -10,9 +10,9 @@
     Cook time: 2~hours + overnight soaking \\
     \vspace*{\baselineskip}
 
-    ½~mug of black eyed peas, dried (or ½~cup) \\
+    ½~mug/½~cup of black eyed peas, dried  \\
     1~medium onion, grated \\
-    ½ - 1~can tomato sauce, Hunt's (213~ml) \\
+    ½-1~can tomato sauce, Hunt's 213~ml can \\
     2~bags of spinach, fresh \\
     Olive oil
 }
