--- a/monanteras/meatsauce.tex
+++ b/monanteras/meatsauce.tex
@@ -11,8 +11,8 @@
     \vspace*{\baselineskip}
 
     1650~g ground beef, extra lean \\
-    1~jar of Catelli Garden Select Tomato \& Basil Pasta Sauce (640~ml) \\
-    1~can tomato juice, Heinz (540~ml) \\
+    640~ml/1~jar of Catelli Garden Select Tomato \& Basil Pasta Sauce \\
+    540~ml/1~can tomato juice, Heinz \\
     1~onion, diced \\
     Salt and pepper \\
     Olive oil \\
@@ -29,6 +29,6 @@ Family member: Mom
     \item Top with meat sauce and sprinkle with lots of pecorino cheese. ENJOY :)
 \end{enumerate}
 
-We found that using 650~g of ground beef, half the jar of Catelli and half the tomato juice can, makes enough for 2~people (with lots of leftovers). It took us a little over an hour to cook half the quantity - Elsa \& Vaski
+We found that using 650~g of ground beef, half the jar of Catelli and half the tomato juice can, makes enough for 2~people, with lots of leftovers. It took us a little over an hour to cook half the quantity - Elsa \& Vaski
 
 \twosidecaptionfigure{monanteras/images/Meatsauce no cheese.jpg}{monanteras/images/Meatsauce with cheese.jpg}{Pasta with meatsauce. (Left) Without added cheese, (Right) With added cheese.}{fig:meatsauce}
