--- a/monanteras/moustokouloura cookies.tex
+++ b/monanteras/moustokouloura cookies.tex
@@ -18,7 +18,7 @@
     2~eggs \\
     ¾~cup sugar \\
     ½~vegetable oil \\
-    ½~orange juice (fresh is better) \\
+    ½~orange juice, fresh is better \\
     ½~cup molasses
 }
 
@@ -29,12 +29,12 @@
 
 Family member: Grandma Eleni
 
-\newthought{The Brown Cookies} is what we called these cookies. Since \textgreek{μούστο} (grape must) was not easy to find in Canada, Grandma \textgreek{Ελένη} replaced it with molasses. They are a bit tricky to shape, so use some vegetable oil on your hands while shaping. Eat soon after baking, and once cooled, stored in a large Tupperware. This allows them to be soft and can be kept for a long time if you can resist.
+\newthought{The Brown Cookies} is what we called these cookies. Since \textgreek{μούστο}, or grape must, was not easy to find in Canada, Grandma \textgreek{Ελένη} replaced it with molasses. They are a bit tricky to shape, so use some vegetable oil on your hands while shaping. Eat soon after baking, and once cooled, stored in a large Tupperware. This allows them to be soft and can be kept for a long time if you can resist.
 
 \begin{enumerate}
     \item In a bowl, mix the cinnamon, cloves, baking powder and ammonia. Add about half of the flour and whisk together. Keep the other flour aside.
     \item In a large mixing bowl, beat the eggs with the sugar. Slowly add the oil, orange juice and molasses while beating.
-    \item Add the dry ingredients (half the flour with the spices and baking powder) to the wet ingredients slowly while mixing. Scrape down the sides of the bowl, and let the dough rest for about 15~minutes.
+    \item Add the dry ingredients, half the flour with the spices and baking powder, to the wet ingredients slowly while mixing. Scrape down the sides of the bowl, and let the dough rest for about 15~minutes.
     \item Restart the mixer and add some of the flour that was kept aside, as much as needed to form a ball. You might not have to use it all.
     \item Place a little bit of vegetable oil in a small bowl and use it to wet hands. Use hands to knead the dough slightly. Dough might be sticky, but use some oil to wet hands. Roll into small balls then into strings, then shape into twists, pretzels and small koulourakia.
     \item Place the shaped cookies onto baking sheets and bake 12-15~minutes on the upper rack at 350\degree F until the tops have a golden colour.
