--- a/monanteras/patatesavga.tex
+++ b/monanteras/patatesavga.tex
@@ -26,7 +26,7 @@ Family member: Grandma Elisavet
 \begin{enumerate}
     \item Peel and cut the potatoes into wedges. Place them in a bowl of cold water.
     \item Heat a large frying pan, add some olive oil. When hot, add the potatoes and fry them. Once cooked, remove and set them aside on a plate.
-    \item Add the eggs to the hot pan, mix them while they cook (scramble them).
+    \item Add the eggs to the hot pan, mix them while they cook scrambling them.
     \item As the eggs cook, add back the potatoes. Continue mixing with a spatula while the eggs cook.
     \item Put the potatoes and eggs onto a large place and sprinkle lots of grated cheese. Serve warm!
 \end{enumerate}
