--- a/monanteras/portokalopita.tex
+++ b/monanteras/portokalopita.tex
@@ -11,7 +11,7 @@
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for cake} \\
-    450~g phyllo sheets (1~pack) \\
+    450~g/1~pack phyllo sheets \\
     4~eggs \\
     ¾~cup sugar \\
     Zest from 2~oranges \\
