--- a/monanteras/tiropita.tex
+++ b/monanteras/tiropita.tex
@@ -33,7 +33,7 @@
 
 Family member: Grandma Elisavet
 
-\newthought{Tiropita} would always be on the table at family dinners. Grandma made her own phyllo dough, called \textgreek{χοριάτικο φύλλο} (or Village phyllo), popular in small towns and villages all around Greece. In the village \textgreek{Δάρα}, she would cook it in the wood-burning stove, outside the house. For the filling, you can play around with the quantities of different cheeses depending on which you can find and what you like. You can add Mitzithra or ricotta too. Kefalograviera cheese can be found in Greek supermarkets in Laval like PA Supermarket, Atlantis and Supermarché Hawaii (see Annex).  % TODO: annex
+\newthought{Tiropita} would always be on the table at family dinners. Grandma made her own phyllo dough, called \textgreek{χοριάτικο φύλλο} (Village phyllo) popular in small towns and villages all around Greece. In the village \textgreek{Δάρα}, she would cook it in the wood-burning stove, outside the house. For the filling, you can play around with the quantities of different cheeses depending on which you can find and what you like. You can add Mitzithra or ricotta too. Kefalograviera cheese can be found in Greek supermarkets in Laval like PA Supermarket, Atlantis and Supermarché Hawaii (see Annex).  % TODO: annex
 
 \begin{enumerate}
     \item To make the phyllo dough, put the flour and salt into a large bowl. Make a well in the center and pour in the olive oil, vinegar and 240~g of the warm water. Mix the flour into the liquid mixture slowly until it comes together, adding the extra 10~g of water if you need to to form a dough.
