--- a/monanteras/tiropitakia_spanakopitakia.tex
+++ b/monanteras/tiropitakia_spanakopitakia.tex
@@ -11,7 +11,7 @@
     Cook time: 15-30~minutes \\
     \vspace*{\baselineskip}
 
-    454~g (1~lb) Greek Phyllo, Krinos or another brand \\
+    454~g/1~lb Greek Phyllo, Krinos or another brand \\
     Olive oil, for brushing\\
     \vspace*{\baselineskip}
 
@@ -22,7 +22,7 @@
     2~eggs, beaten \\
     1~tsp baking powder \\
     Approximately 500~g Canadian feta cheese, crumbled \\
-    ½~block (125~g) of cream cheese, Philadelphia \\
+    125~g/½~block of cream cheese, Philadelphia \\
     2~tbsp cottage cheese, Liberte or another brand \\
     Salt and pepper, to taste \\
     \vspace*{\baselineskip}
@@ -31,7 +31,7 @@
     2~eggs, beaten \\
     1~tsp baking powder \\
     Approximately 500~g Canadian feta cheese, crumbled \\
-    ½~block (125~g) of cream cheese, Philadelphia \\
+    125~g/½~block of cream cheese, Philadelphia \\
     2~tbsp cottage cheese, Liberte or another brand \\
     Salt and pepper, to taste
 }
@@ -49,6 +49,6 @@ Family member: Grandma Eleni
     \item Make the Tiropitakia filling: crumble the feta cheese into a large bowl and add the cream cheese, cottage cheese, egg, baking powder, salt and pepper. Mix well with a fork to combine the ingredients.
     \item Preheat the oven to 350\degree F and start shaping your triangles.
     \item Open one sheet of the phyllo dough on the kitchen counter and brush the first layer with some olive oil. Layer another sheet on top and brush the second phyllo again with some olive oil. Keep the other layers of phyllo under a clean kitchen towel so they don't dry out.
-    \item Cut the phyllo sheets in 3-4~lanes (depending on if you like the triangles to be small or larger). At the end of each lane add one tablespoon of the filling. Fold one corner to form a triangle and continue folding the triangle upon itself, until the entire piece of phyllo is used. Continue with the rest phyllo sheets and filling.
+    \item Cut the phyllo sheets in 3-4~lanes, depending on if you like the triangles to be small or larger. At the end of each lane add one tablespoon of the filling. Fold one corner to form a triangle and continue folding the triangle upon itself, until the entire piece of phyllo is used. Continue with the rest phyllo sheets and filling.
     \item Place the triangles on a baking sheet lined with parchment. Brush them with some olive oil on top. Bake them in preheated oven for 10-15~minutes, until the tops and bottoms are golden.
 \end{enumerate}
