--- a/monanteras/tsoureki.tex
+++ b/monanteras/tsoureki.tex
@@ -12,7 +12,7 @@
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for dough} \\
-    11~cups all purpose flour (Five Roses) \\
+    11~cups all purpose flour, Five Roses \\
     1½~cups sugar \\
     1½~cups milk \\
     1½~cups butter, melted and cooled \\
