--- a/velsa/babka.tex
+++ b/velsa/babka.tex
@@ -25,7 +25,7 @@
     \textbf{Filling ingredients} \\
     130~g dark chocolate \\
     120~g butter \\
-    50~g powdered (icing) sugar, sifted \\
+    50~g powdered icing sugar, sifted \\
     30~g cocoa powder, sifted \\
     Cinnamon \\
     \vspace*{\baselineskip}
@@ -40,9 +40,9 @@ Family member: Elsa \& Vaski
 \marginalfigure{velsa/images/Window pane test.png}{Window pane test}{fig:babka1}
 
 \begin{enumerate}
-    \item In a mixing bowl, add flour, salt, sugar, instant yeast and grated lemon (or orange) and mix using the paddle. Add the eggs and water to a measuring cup, whisk with a fork to combine. Add while mixing, and you can add the extra 1-2~tbsp of water if needed to get all the flour incorporated and a dough is formed. Switch to the hook attachment.
+    \item In a mixing bowl, add flour, salt, sugar, instant yeast and grated lemon, or orange, and mix using the paddle. Add the eggs and water to a measuring cup, whisk with a fork to combine. Add while mixing, and you can add the extra 1-2~tbsp of water if needed to get all the flour incorporated and a dough is formed. Switch to the hook attachment.
     \item Mix on medium for another 10~minutes until the dough pulls from the sides of the bowl and is smooth. You can add 1~tbsp of flour to help the dough unstick if needed. The key is to have a very smoothe dough - you can check if it passes the window pane test!
-    \item Coat a large bowl with vegetable oil (or Pam spray), put the dough inside and cover with plastic wrap. Refrigerate overnight.
+    \item Coat a large bowl with vegetable oil, or Pam spray, put the dough inside and cover with plastic wrap. Refrigerate overnight.
     \item The next day, start by making the filling: melt the chocolate and butter in the microwave and mix until smoothe. Stir in the powdered sugar, cocoa powder and cinnamon, and mix until it is homogeneous. Leave the filling aside until it hardens a little and becomes a paste.
     \item Spray 2~loaf pans with Pam and cover with parchment paper. Take half of the dough from the fridge and roll it out into a 10~x~10-inch square. Spread half the chocolate chilling evenly on the dough. Place the dough on a baking sheet and in the fridge. Do the same with the second half of the dough.
     \item Roll both doughs into tight event logs, like when making cinnamon rolls. Cut the logs half lengthwise at the top.
