--- a/velsa/chickencacciatore.tex
+++ b/velsa/chickencacciatore.tex
@@ -31,7 +31,7 @@
 Family member: Elsa \& Vaski
 
 \begin{enumerate}
-    \item In a large Creuset (or pot that can go in the oven), use half the oil to brown the chicken pieces. Season with salt and pepper, set aside on a plate with paper towel once cooked through.
+    \item In a large Creuset, or pot that can go in the oven, use half the oil to brown the chicken pieces. Season with salt and pepper, set aside on a plate with paper towel once cooked through.
     \item In the same Creuset, brown the mushrooms and onions with the remaining olive oil. Season with salt and pepper. Add the peppers and garlic and cook for another minute. Deglaze with the wine, then add the diced tomatoes, tomato purée, harissa and chicken to the pot.
     \item Bring to a boil and then place into the oven at 350\degree F for 45~minutes to 1~hour, until the sauce has thickened and reduced. Check the chicken for doneness.
 
