--- a/velsa/gigantest_plaki.tex
+++ b/velsa/gigantest_plaki.tex
@@ -35,9 +35,9 @@ Family member: Elsa \& Vaski
 \begin{enumerate}
     \item Soak the gigantes beans in cold water overnight.
     \item The next day, drain the water.
-    \item On the stove, heat olive oil in a large pot (or Creuset). Add the onion and cook until translucent. Add garlic and cook 1~minute more.
+    \item On the stove, heat olive oil in a large pot or Creuset. Add the onion and cook until translucent. Add garlic and cook 1~minute more.
     \item Add the gigantes beans and hot water. Cook for about 30~minutes on the stove top.
-    \item Add the diced tomatoes, parsley, celery (if using), oregano, salt and pepper. Place in the oven at 350\degree F.
+    \item Add the diced tomatoes, parsley, celery, if using, oregano, salt and pepper. Place in the oven at 350\degree F.
     \item Simmer until reduced and thickened, and can add the ¼~cup extra water to get wanted consistency.
     \item After about 1~hour, check peas for doneness, remove from oven and let cool.
     \item Top with more fresh parsley, serve with toasted village bread and feta.
