--- a/velsa/kourabiewithnuts.tex
+++ b/velsa/kourabiewithnuts.tex
@@ -33,7 +33,7 @@ Family member: Elsa \& Vaski
     \item In the food processor, add the cold butter and powdered sugar. Mix for 10-15~seconds until the butter is reduced in size, almost the size of peas. Add the 50~g raw powdered almonds, a pinch of salt, the rosewater and vanilla. Mix for 10-20~seconds to combine and scrape the sides. Add the baking powder and flour and mix again for 10-15~seconds.
     \item Place the mixture in a larger bowl, add the 150~g toasted  chopped almonds and mix lightly with your hands.
     \item Preheat oven to 350\degree F and layer 2~baking sheets with parchment paper.
-    \item Roll dough into 1~tbsp (30~g) balls and place them on the baking sheets. Slightly put with your finger in the middle, to form a little dimple. Place in the fridge for 10-15~minutes before baking.
+    \item Roll dough into 30~g/1~tbsp balls and place them on the baking sheets. Slightly put with your finger in the middle, to form a little dimple. Place in the fridge for 10-15~minutes before baking.
     \item Bake for 15-20~minutes until the cookies are faintly golden on the top and coloured on the bottom. Be careful not to overbake them.
     \item Let them completely cool before dusting them with powdered sugar.
 \end{enumerate}
