--- a/velsa/roasted_beet_salad_with_ricotta.tex
+++ b/velsa/roasted_beet_salad_with_ricotta.tex
@@ -16,7 +16,7 @@
     1~small shallot, minced \\
     1~tbsp honey \\
     2~tbsp parsley, chopped \\
-    75~g-100~g ricotta (or goat cheese) \\
+    75~g-100~g ricotta, or goat cheese \\
     55~g pistachios, toasted and chopped \\
     Olive oil \\
     Rosemary, fresh \\
