--- a/dermardiros/armeniancoffee.tex
+++ b/dermardiros/armeniancoffee.tex
@@ -18,7 +18,7 @@
 Family member: Dan
 
 \begin{enumerate}
-    \item In a coffee pot, measure and pour in approximately 3~oz (100~ml) of cold water for each cup.
+    \item In a coffee pot, measure and pour in approximately 100~ml/3~fl~oz of cold water for each cup.
     \item For each cup, mix in 1~heaping teaspoon of very finely ground coffee. If desired, also mix in 1~teaspoon of sugar per each cup. Optional: add or grind cardamom in the coffee pot after adding the coffee for flavour.
     \item On medium heat bring to an almost boil. However, do not let it boil.
     \item Once froth rises, remove from heat and serve.
