--- a/dermardiros/beuregtriangles.tex
+++ b/dermardiros/beuregtriangles.tex
@@ -10,19 +10,19 @@
     Cook time: 15-30~minutes \\
     \vspace*{\baselineskip}
 
-    454~g (1~lb) Greek Phyllo, Krinos or another brand \\
+    454~g/1~lb Greek Phyllo, Krinos or another brand \\
     Butter, melted and cooled, for brushing \\
     Eggs, for eggwash \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for cheese filling} \\
     2~eggs, beaten \\
-    454~g (1~lb) double cream Greek feta cheese, crumbled \\
+    454~g/1~lb double cream Greek feta cheese, crumbled \\
     2~tbsp fresh parsley, chopped \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for meat filling} \\
-    454~g (1~lb) ground beef, lean \\
+    454~g/1~lb ground beef, lean \\
     1~onion, thinly chopped \\
     Pepper
 }
@@ -36,7 +36,7 @@ Family member: Nene Hermine
     \item Make the meat filling: in a separate large bowl, mix the ground beef, chopped onion and parsley. Season with pepper, combine well and set aside.
     \item Preheat the oven to 350\degree F and start shaping your triangles.
     \item Open one sheet of the phyllo dough on the kitchen counter and brush the first layer with some melted butter. Layer another sheet on top and brush the second layer again with some butter. Keep the other layers of phyllo under a clean kitchen towel so they don't dry out.
-    \item Cut the phyllo sheets in 3-4~lanes (depending on if you like the triangles to be small or larger). At the end of each lane add one tablespoon of the filling. Fold one corner to form a triangle and continue folding the triangle upon itself, until the entire piece of phyllo is used. Continue with the rest phyllo sheets and filling.
+    \item Cut the phyllo sheets in 3-4~lanes, depending on whether you like the triangles to be small or larger. At the end of each lane add one tablespoon of the filling. Fold one corner to form a triangle and continue folding the triangle upon itself, until the entire piece of phyllo is used. Continue with the rest phyllo sheets and filling.
     \item Place the triangles on a baking sheet lined with parchment. Brush the tops with some butter. Bake them in preheated oven for 15-20~minutes, until the tops and bottoms are golden.
 \end{enumerate}
 
