--- a/dermardiros/hamquiche.tex
+++ b/dermardiros/hamquiche.tex
@@ -11,12 +11,12 @@
     Cook time: 45~minutes \\
     \vspace*{\baselineskip}
 
-    Pastry for one 9-inch piecrust, well chilled (Tenderflake Deep Dish pie crust) \\
+    Pastry for one 9-inch piecrust, well chilled, Tenderflake Deep Dish pie crust \\
     Margarine \\
-    1~large onion, chopped (about 1~cup) \\
+    1~large onion, chopped, about 1~cup \\
     1~tablespoon all purpose flour \\
-    120~g (¼~lb) of Gruyere cheese \\
-    120~g (¼~lb) of Swiss cheese \\
+    120~g/¼~lb of Gruyere cheese \\
+    120~g/¼~lb of Swiss cheese \\
     1~slice of smoked ham \\
     3~large eggs \\
     1~cup half-and-half cream
