--- a/dermardiros/strawberrysalad.tex
+++ b/dermardiros/strawberrysalad.tex
@@ -10,7 +10,7 @@
     \vspace*{\baselineskip}
 
     140~grams of arugula lettuce \\
-    420~grams (1~basket) of fresh Quebec strawberries \\
+    420~grams/1~basket of fresh Quebec strawberries \\
     ¾~cup of pecans \\
     ½~cup of virgin olive oil \\
     ¼~cup of balsamic vinegar \\
