--- a/velsa/pastitsio.tex
+++ b/velsa/pastitsio.tex
@@ -26,7 +26,7 @@
 
     \textbf{Bechamel sauce ingredients} \\
     4~cups whole milk \\
-    8~tbsp (100~g) butter, unsalted \\
+    100~g/8~tbsp butter, unsalted \\
     8~tbsp all-purpose flour \\
     4~egg yolks \\
     ½~cup Kefalograviera cheese, grated \\
@@ -35,7 +35,7 @@
     Nutmeg \\
     \vspace*{\baselineskip}
 
-    300~g pasta, Misko Pastitsio No 2~or penne \\
+    300~g pasta, Misko Pastitsio No~2 or penne \\
     4~tbsp butter, melted + extra for brushing \\
     2~tbsp bread crumbs \\
     227~g unsalted butter, room T, very soft and cut into cubes
